Revise contact details and enhance gallery section
Updated contact information and added new images.

--- a/index.html
+++ b/index.html
@@ -175,9 +175,10 @@ ul {
         Email: <a href="hayathansatymbekova@gmail.com">My.email</a><br>
         Phone: +7 776 662 72 39 <br>
         LinkedIn: <a href="www.linkedin.com/in/khayatkhan-satymbekova-24062a232"> My linkedin</a><br>
-        GitHub: <a href="https://hayathansatymbekova-cmyk.github.io/HTML-Tasks/" target="_blank"> My github</a>
+        GitHub: <a href="https://hayathansatymbekova-cmyk.github.io/exam/" target="_blank"> My github</a>
     </p>
 </section>
 
 </body>
 </html>
+
